unpackaged/main/default/objects/Price_List_Definition__c/Price_List_Definition__c.object-meta.xml
<CustomObject>
    <label>Price List Definition</label>
    <nameField>
        <displayFormat>PLD-{000000}</displayFormat>
        <label>Price List Definition Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price List Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>