unpackaged/main/default/objects/Price_List_Definition__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the price list</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>