unpackaged/main/default/objects/Price_List_Definition__c/fields/Duplicate_Active_Price_List__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Active_Price_List__c</fullName>
    <label>Duplicate Active Price List</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>