unpackaged/main/default/objects/Price_List_Definition__c/fields/Price_List_Definition_ID__c.field-meta.xml
<CustomField>
    <fullName>Price_List_Definition_ID__c</fullName>
    <description>External Id of the price list record</description>
    <externalId>true</externalId>
    <label>Price List Definition ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>