unpackaged/main/default/objects/Price_List_Definition__c/fields/Price_List_Name__c.field-meta.xml
<CustomField>
    <fullName>Price_List_Name__c</fullName>
    <description>Name of the price list</description>
    <label>Price List Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>