unpackaged/main/default/objects/Price_List_Definition__c/fields/Primary_Segment__c.field-meta.xml
<CustomField>
    <fullName>Primary_Segment__c</fullName>
    <description>Primary segment associated to the price list</description>
    <label>Primary Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>