unpackaged/main/default/objects/Price_List_Definition__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Region of the price list</description>
    <label>Region</label>
    <length>64</length>
    <type>Text</type>
</CustomField>