unpackaged/main/default/objects/Price_List_Definition__c/fields/Secondary_Segment__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Segment__c</fullName>
    <description>Secondary segment associated to the price list. Flat text field association. Any updates to segments on price lists to be catered by source system integration.</description>
    <label>Secondary Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>