unpackaged/main/default/objects/Price_List_Definition__c/fields/Spend_Band__c.field-meta.xml
<CustomField>
    <fullName>Spend_Band__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated spend band</description>
    <label>Spend Band</label>
    <referenceTo>Spend_Band__c</referenceTo>
    <relationshipLabel>Price List Definitions</relationshipLabel>
    <relationshipName>Price_List_Definitions</relationshipName>
    <type>Lookup</type>
</CustomField>