unpackaged/main/default/objects/Price_List_Definition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Price_List_Definition_ID__c</columns>
    <columns>Price_List_Name__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>